fix (horizontal scroller): removed styles that can affect column blocks

--- a/src/block/column/style.scss
+++ b/src/block/column/style.scss
@@ -2,7 +2,6 @@
 
 .stk-block.stk-block-column .stk-column-wrapper {
 	width: 100%;
-	overflow: hidden;
 }
 .stk-block-column__content {
 	box-sizing: border-box;
